--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -109,7 +109,7 @@
                             Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">
+                        <a class="nav-link" href="{% url 'signup' %}">
                             <svg width="2em" height="1.5em" viewBox="0 0 16 16" class="bi bi-person-plus-fill"
                                 fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd"
