--- a/blog/static/imported.css
+++ b/blog/static/imported.css
@@ -1,4 +1,4 @@
-body {
+body,html {
   background-image: url("https://1.bp.blogspot.com/-Fo3iRt97ZXY/XvSG4EMwi0I/AAAAAAAAVEo/mrApRTcVVRk1m-fX9K-ffNwRUXlHUocdwCLcBGAsYHQ/s1600/h.jpg");
 
   background-color: #181828;
