--- a/blog/templates/blog/signup.html
+++ b/blog/templates/blog/signup.html
@@ -1,8 +1,32 @@
 {% extends 'blog/base.html' %}
 {% block body_block %}
-<form action="" method="POST">
-{% csrf_token %}
-{{form.as_p}}
-<input type="submit" value="submit">
-</form>
+<div class="login-box">
+    <form method="post" action="{% url 'signup' %}">
+        {% csrf_token %}
+        <h2>Signup HERE!</h2>
+        <div class="user-box">
+            {{ form.username }}
+            <label>Username</label>
+        </div>
+    
+        <div class="user-box">
+            {{ form.password1 }}
+            <label>Password</label>
+        </div>
+
+        <div class="user-box">
+            {{ form.password2 }}
+            <label>Confirm Password</label>
+        </div>
+    
+        <a type="submit" value="signup">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <input type="submit" value="Signup">
+        </a>
+    </form>
+    
+</div>
 {% endblock body_block %}
