--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,19 +3,20 @@
 {% block body_block %}
 
 <div>
-<div class="card read_card">
-  <div class="card-header">
-    <h1>{{post.title}}</h1>
-  </div>
-  <div class="card-body">
-    <blockquote class="blockquote mb-0">
-      <p>{{post.text}}</p>
-      <footer class="blockquote-footer"><em><small>by {{post.author}}</small></em><br>
-    <small>Published on : {{post.date_posted}}</small></footer>
-    </blockquote>
-  </div>
-</div>    
-    
+    <div class="card read_card">
+        <div class="card-header">
+            <h1>{{post.title}}</h1>
+        </div>
+        <div class="card-body">
+            <blockquote class="blockquote mb-0">
+                <p>{{post.text}}</p>
+                <footer class="blockquote-footer"><em><small>by {{post.author}}</small></em><br>
+                    <small>Published on : {{post.date_posted}}</small></footer>
+            </blockquote>
+        </div>
+    </div>
+
+    {% if user == post.author %}
     {% if post.date_posted %}
     {% else %}
     <a class="btn btn-light" href="{% url 'blog:publish' pk=post.id %}">
@@ -45,6 +46,7 @@
                 d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
         </svg>
     </a>
+    {% endif %}
 </div>
 
 <div>
@@ -53,7 +55,7 @@
 
     <div class="comments">
 
-        {% if user.is_authenticated or c.approved_comment %}
+        {% if user == post.author or c.approved_comment %}
         <div>{{c.text}}</div>
         <cite><small>&mdash; {{c.author}}</small></cite>
         <div><small>Posted on : {{c.date_created}}</small></div>
@@ -63,9 +65,8 @@
         <div class="comments_border">&nbsp;</div>
         {% endif %}
 
-        {% if user.is_authenticated %}
-        {% if c.approved_comment %}
-        {% else %}
+        {% if user.is_authenticated and not c.approved_comment and user == post.author %}
+        
         <a class="btn btn-outline-danger" href="{% url 'blog:commentremove' pk=c.id %}">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-x" fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg">
@@ -87,27 +88,26 @@
 
         {% endif %}
 
-        {% endif %}
-
     </div>
     {% endfor %}
     <form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button class="comment-btn" type="submit">
-        <a class="btn btn-success">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor"
-            xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-                d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z" />
-            <path fill-rule="evenodd" d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z" />
-            <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-        </svg>
-        Add Comment
-    </a>
-    </button>
+        {% csrf_token %}
+        {{form.as_p}}
+        <button class="comment-btn" type="submit">
+            <a class="btn btn-success">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                        d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z" />
+                    <path fill-rule="evenodd" d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z" />
+                    <path fill-rule="evenodd"
+                        d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                </svg>
+                Add Comment
+            </a>
+        </button>
     </form>
-    
+
 
     {% endblock body_block %}
 </div>
