--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -14,6 +14,9 @@
     {% csrf_token %}
     <div>
         <div>
+            {{form.author}}
+        </div>
+        <div>
             {{form.title.label_tag}}
             {{form.title}}
         </div>
