--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -21,6 +21,10 @@
             {{form.title}}
         </div>
         <div>
+            {{form.group.label_tag}}
+            {{form.group}}
+        </div>
+        <div>
             {{form.text.label_tag}}
             {{form.text}}
         </div>
