--- a/blog/templates/blog/mygroup.html
+++ b/blog/templates/blog/mygroup.html
@@ -3,7 +3,7 @@
 <div class="top-bar">
     <h1>{{mygroup.name}}</h1>
     {% if user == mygroup.admin %}
-    <a href="#" class="btn btn-danger">Delete Group</a>
+    <a href="{% url 'blog:groupdelete' pk=mygroup.id %}" class="btn btn-danger">Delete Group</a>
     {% endif %}
 </div>
 <div class="row">
@@ -45,7 +45,7 @@
                     <div>{{member.username}}</div>
 
                     {% if user == mygroup.admin %}
-                    <a class="btn btn-outline-danger" href="#">
+                    <a class="btn btn-outline-danger" href="remove/{{member.id}}">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-dash" fill="currentColor"
                             xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
