--- a/blog/templates/blog/mygroup_list.html
+++ b/blog/templates/blog/mygroup_list.html
@@ -2,7 +2,13 @@
 {% block body_block %}
 <div class="top-bar">
 <h1>Groups</h1>
-<a href="#" class="btn btn-success">Add New Group</a>
+<form method="post">
+{% csrf_token %}
+{{form}}   
+<button type="submit" class="comment-btn">
+<a class='btn btn-success'>Add New Group</a>
+</button>
+</form>
 </div>
 {% for group in mygroup_list %}
 <div>
@@ -19,7 +25,7 @@
             <a href="{% url 'blog:joingroup' pk=group.id %}" class="btn btn-success">Join Group</a>
             {% endif %}
         </div>
-        <div class="card-footer">Members : {{group.member.count}}</div>
+        <div class="card-footer">Members : {{group.member.count}} &emsp; Posts : {{group.posts.count}}</div>
     </div>
 {% endfor %}
 
